# LlmTokenFinder

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: activation_probe.ipynb  attention_analyser.ipynb  basic_attention_analyser.ipynb  basic_token_display.ipynb  find_multitoken_strings.ipynb  it_example.ipynb  practical_code_example.ipynb  practical_nlp_example.ipynb  token_movement_ablation.ipynb
src/activation_probing/: activation_dataset.py  activation_dataset_generator.py
src/llm_inspect/: __init__.py
src/llm_inspect/ablation/: __init__.py  ablation_llm.py
src/llm_inspect/activation_analysis/: __init__.py  attention_head_finder.py
src/llm_inspect/activation_probing/: __init__.py  activation_dataset.py  activation_dataset_generator.py  probe.py
src/llm_inspect/common/: __init__.py  attention_head.py
src/llm_inspect/token_finder/: __init__.py  ablation.py  activation_analyser.py  code.py  token_display.py  token_finder.py
src/llm_token_finder/: __init__.py  ablation.py  activation_analyser.py  code.py  token_display.py  token_finder.py
tests/: test_ablation.py  test_activation_analyser.py  test_code_function_finder.py  test_probe_training.py  test_token_finder.py  test_token_finder_multitoken.py
